  * policy checked against 3.5.9
  * don't ship /var/www/docbook-dsssl symlink in the package, but handle
    it in the maintainer scripts such that it is created on install, but
    not recreated on upgrade; this allows the local system administrator
    to remove the symlink if they prefer; closes: #184962
  * rules: minor cleanups and redundancy removal

 -- Adam Di Carlo <aph@debian.org>  Sat, 22 Mar 2003 13:20:06 -0500

docbook-dsssl (1.78-2) unstable; urgency=low

  * fix README.Debian; closes: #185322
  * debconf: "Show contents of comments?" wording fixed;
    closes: #185124
  * i18n of debian/templates; closes: #184870
  * fix synopsis according to best pactices; remove author link from
    description

 -- Adam Di Carlo <aph@debian.org>  Thu, 20 Mar 2003 23:43:03 -0500

docbook-dsssl (1.78-1) unstable; urgency=low

  * new upstream release; a number of problems are either fixed in this
    release or otherwise unreproducable; closes: #176283, #75000
  * postinst: if in siteconfig.dsl there is a setting commented out, leave
    it alone (e.g., don't re-enable and set it)
  * debconf: print papersize now allows user to specify A4, A4landscape,
    USletter, USlandscape, or to use 'paperconf' from libpaperg
  * debconf: fix nasty error causing priorities to be wrong and questions
    not to be asked
  * debconf: lower the priority of all questions except for papersize

 -- Adam Di Carlo <aph@debian.org>  Wed, 19 Feb 2003 09:29:51 -0500

docbook-dsssl (1.77-cvs.2003.02.06) unstable; urgency=low

  * more upstream fixes
  * /usr/share/sgml/docbook/stylesheet/dsssl/modular/README symlink to
    README in the docs; closes: #149880
  * postinst: fix a quoting problem; closes: #178020
  * debconf: question about HTML extension made low priority, since
    ".html" is definately the standard; in fact, I only offer ".htm" since
    that's the upstream default; closes: #178003
  * also make make the following debconf questions low priority: